--- a/main/cv.html
+++ b/main/cv.html
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
 
 </li>
 </ul>
-<h2>Work Experience</h2>
+<h2>Experience</h2>
 <ul>
 <li><p>Sept. 2023 - present : Research Assistant, <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>
 </p>
@@ -55,36 +55,36 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
-<h2>Awards</h2>
+<h2>Awards and Honors</h2>
 <ul>
 <li><p>Jun. 2022: Outstanding Graduate of Huazhong University of Science &amp; Technology [<a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Sept. 2019: National Innovation Contest for Intelligent Construction and Management, First prize [<a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p>Sept. 2019: National Innovation Contest for Intelligent Construction and Management, <i>First prize</i> [<a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Sept. 2019: Outstanding Bachelor Degree Thesis of Huazhong Agricultural University [<a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p>Sept. 2019: Outstanding Bachelor's Degree Thesis of Huazhong Agricultural University [<a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 <li><p>Jun. 2019: Outstanding Graduate of Huazhong Agricultural University [<a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>May 2018: Computer Design Contest of Huazhong Agricultural University, Third prize [<a href="http://storage.jingwang.site/doc/2018-HZAU-Computer-Design-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p>May 2018: Computer Design Contest of Huazhong Agricultural University, <i>Third prize</i> [<a href="http://storage.jingwang.site/doc/2018-HZAU-Computer-Design-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Dec. 2017: Programming Contest of Huazhong Agricultural University, Second prize [<a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p>Dec. 2017: Programming Contest of Huazhong Agricultural University, <i>Second prize</i> [<a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Nov. 2017: China Undergraduate Mathematical Contest in Modeling, First prize [<a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p>Nov. 2017: China Undergraduate Mathematical Contest in Modeling, <i>First prize</i> [<a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>May 2017: Surveying and Mapping Skills Contest of Huazhong Agricultural University, Third prize [<a href="http://storage.jingwang.site/doc/2017-HZAU-Surveying-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p>May 2017: Surveying and Mapping Skills Contest of Huazhong Agricultural University, <i>Third prize</i> [<a href="http://storage.jingwang.site/doc/2017-HZAU-Surveying-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-09.
+Last updated on 2024-04-20.
 </div>
 </div>
 </div>
