--- a/main/index.html
+++ b/main/index.html
@@ -86,7 +86,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 </li>
 </ol>
-<h3>Journal Papers</h3>
+<h3>Journal Articles</h3>
 <ol>
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems</i>, 2024. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
@@ -99,7 +99,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 </li>
 </ol>
-<h3>Conference Papers</h3>
+<h3>Conference Proceedings</h3>
 <ol>
 <li><p>Bingxi Jia*, Haidong Ren, Zheng Yang, <b>Jingwang Li</b> and Xiaofei He. &ldquo;Cascaded motion estimation for intelligent vehicles in GNSS-denied scenes&rdquo;, <i>Chinese Control Conference</i>, 2023. [<a href="https://doi.org/10.23919/CCC58697.2023.10239725" target=&ldquo;blank&rdquo;>DOI</a>]
 </p>
@@ -134,7 +134,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-09.
+Last updated on 2024-04-20.
 </div>
 </div>
 </div>
