--- a/main/index.html
+++ b/main/index.html
@@ -31,17 +31,17 @@ School of Date Science,<br />
 The Chinese University of Hong Kong, Shenzhen<br />
 Shenzhen, China<br />
 
-<b>Email</b>: jingwangli [at] outlook.com<br />
+<b>Email</b>: jingwangli [at] outlook.com (<i>Preferred</i>)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli [at] cuhk.edu.cn<br />
-<b>Links</b>: <a href="https://blog.jingwang.site" target=&ldquo;blank&rdquo;>Blog</a> | <a href="cv.html" target=&ldquo;blank&rdquo;>CV</a><br />
+<b>Links</b>: <a href="https://blog.jingwangli.com" target=&ldquo;blank&rdquo;>Blog</a> | <a href="cv.html">CV</a><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 
 
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>Currently, I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.
-Before that, I received a BSc in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
+<p>Currently, I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.
+Before that, I received a BSc in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
 
 </p>
 <h2>News</h2>
@@ -125,6 +125,9 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 
 </li>
 </ul>
+<h2>Visitors Map</h2>
+<p>The data have been collected since Oct. 2023.
+</p>
 <p><a href='https://clustrmaps.com/site/1bwx0'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=400&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg'/></a>
 
 
@@ -134,7 +137,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-20.
+Last updated on 2024-04-22.
 </div>
 </div>
 </div>
