--- a/main/index.html
+++ b/main/index.html
@@ -40,7 +40,7 @@ Shenzhen, China<br />
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>Currently, I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.
+<p>Currently, I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the mentorship of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.
 Before that, I received a BSc in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
 
 </p>
@@ -110,8 +110,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </li>
 </ol>
 <h2>Academic Services</h2>
-<ul>
-<li><p>Reviewer of
+<p>Reviewer of
 </p>
 <ul>
 <li><p><i>IEEE Transactions on Control of Network Systems</i>
@@ -120,9 +119,6 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 <li><p><i>IEEE Transactions on Systems, Man and Cybernetics: Systems</i>
 
 </p>
-</li>
-</ul>
-
 </li>
 </ul>
 <h2>Visitors Map</h2>
@@ -137,7 +133,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-22.
+Last updated on 2024-05-09.
 </div>
 </div>
 </div>
