--- a/main/index.html
+++ b/main/index.html
@@ -33,6 +33,7 @@ Shenzhen, China<br />
 
 <b>Email</b>: jingwangli [at] outlook.com (<i>Preferred</i>)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli [at] cuhk.edu.cn<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;admin [at] jingwangli.com<br />
 <b>Links</b>: <a href="https://blog.jingwangli.com" target=&ldquo;blank&rdquo;>Blog</a> | <a href="cv.html">CV</a><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 
@@ -133,7 +134,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-05-09.
+Last updated on 2024-05-24.
 </div>
 </div>
 </div>
