--- a/main/cv.html
+++ b/main/cv.html
@@ -26,7 +26,11 @@ MathJax.Hub.Config({
 </div>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : MPhil in Control Science &amp; Engineering, <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>
+<li><p>Aug. 2024 - Present : PhD student in Electronic and Computer Engineering
+, <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>The Hong Kong University of Science &amp; Technology</a>
+</p>
+</li>
+<li><p>Sept. 2019 - Jun. 2022 : MEng in Control Science &amp; Engineering, <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>
 
 
 </p>
@@ -34,10 +38,10 @@ MathJax.Hub.Config({
 <li><p>Sept. 2015 - Jun. 2019 : <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>
 </p>
 <ul>
-<li><p>Sept. 2016 - Jun. 2019 : BSc in Engineering Management
+<li><p>Sept. 2016 - Jun. 2019 : BMgmt in Engineering Management
 </p>
 </li>
-<li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology
+<li><p>Sept. 2015 - Jul. 2016 : BSc student in Aquatic Science &amp; Technology
 
 </p>
 </li>
@@ -47,7 +51,7 @@ MathJax.Hub.Config({
 </ul>
 <h2>Experience</h2>
 <ul>
-<li><p>Sept. 2023 - Present : Research Assistant, <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>
+<li><p>Sept. 2023 - Jun. 2024 : Research Assistant, <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>
 </p>
 </li>
 <li><p>Jun. 2022 - Sept. 2023 : Algorithm Engineer, <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>
@@ -78,7 +82,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-05-28.
+Last updated on 2024-07-27.
 </div>
 </div>
 </div>
