--- a/main/index.html
+++ b/main/index.html
@@ -26,21 +26,22 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p><i>Research Assistant</i><br />
-School of Date Science,<br />
-The Chinese University of Hong Kong, Shenzhen<br />
-Shenzhen, China<br /><br />
+<td align="left"><p><i>(Incoming) PhD Student</i><br />
+Department of Electronic & Computer Engineering,<br />
+The Hong Kong University of Science & Technology<br />
+Clear Water Bay, Hong Kong<br /><br />
 
 <b>Email</b>: jingwangli [at] outlook.com (<i>Preferred</i>)<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli [at] cuhk.edu.cn<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwang.li [at] connect.ust.hk<br />
 
 <b>Links</b>: <a href="https://blog.jingwangli.com" target=&ldquo;blank&rdquo;>Blog</a> | <a href="cv.html">CV</a> | <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the mentorship of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.
-Before that, I received a BSc in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
+<p>I am an incoming PhD student at <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>the Hong Kong University of Science & Technology</a>, advised by <a href="https://scholar.google.com/citations?hl=en&amp;user=SpVboHsAAAAJ" target=&ldquo;blank&rdquo;>Prof. Vincent Lau</a>.<br />
+
+Previously, I received a BMgmt in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MEng in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>. After earning my MEng, I worked as an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving. Upon deciding to pursue a PhD, I resigned and went to <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a> as a research assistant, where I worked on accelerated decentralized optimization under the mentorship of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. 
 
 </p>
 <h2>News</h2>
@@ -132,7 +133,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-05-28.
+Last updated on 2024-07-27.
 </div>
 </div>
 </div>
