--- a/main/index.html
+++ b/main/index.html
@@ -39,9 +39,9 @@ Clear Water Bay, Hong Kong<br /><br />
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>I am an incoming PhD student at <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>the Hong Kong University of Science & Technology</a>, advised by <a href="https://scholar.google.com/citations?hl=en&amp;user=SpVboHsAAAAJ" target=&ldquo;blank&rdquo;>Prof. Vincent Lau</a>.<br />
+<p>I am an incoming PhD student at <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>the Hong Kong University of Science & Technology</a>, advised by <a href="https://scholar.google.com/citations?hl=en&amp;user=SpVboHsAAAAJ" target=&ldquo;blank&rdquo;>Prof. Vincent Lau</a>.<br /><br />
 
-Previously, I received a BMgmt in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MEng in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>. After earning my MEng, I worked as an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving. Upon deciding to pursue a PhD, I resigned and went to <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a> as a research assistant, where I worked on accelerated decentralized optimization under the mentorship of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. 
+Previously, I received a BMgmt in Engineering Management from <a href="https://en.hzau.edu.cn" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MEng in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>. After earning my MEng, I worked as an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving. Upon deciding to pursue a PhD, I resigned and went to <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a> as a research assistant, where I worked on accelerated decentralized optimization under the mentorship of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. 
 
 </p>
 <h2>News</h2>
@@ -133,7 +133,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://w
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-07-27.
+Last updated on 2024-08-02.
 </div>
 </div>
 </div>
