--- a/main/index.html
+++ b/main/index.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p><i>Incoming PhD Student</i>, Department of Electronic & Computer Engineering<br />
+<td align="left"><p><i>PhD Student</i>, Department of Electronic & Computer Engineering<br />
 The Hong Kong University of Science & Technology<br />
 Clear Water Bay, Hong Kong<br /><br />
 
@@ -38,20 +38,14 @@ Clear Water Bay, Hong Kong<br /><br />
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>I am an incoming PhD student at <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>the Hong Kong University of Science & Technology</a>, advised by <a href="https://scholar.google.com/citations?hl=en&amp;user=SpVboHsAAAAJ" target=&ldquo;blank&rdquo;>Prof. Vincent Lau</a>.<br />
+<p>I am currently a PhD student at <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>the Hong Kong University of Science & Technology</a>, advised by <a href="https://scholar.google.com/citations?hl=en&amp;user=SpVboHsAAAAJ" target=&ldquo;blank&rdquo;>Prof. Vincent Lau</a>.<br />
 
 Previously, I received a BMgmt in Engineering Management from <a href="https://en.hzau.edu.cn" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MEng in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>. After earning my MEng, I worked as an algorithm engineer at <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving. Upon deciding to pursue a PhD, I resigned and went to <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a> as a research assistant, where I worked on accelerated decentralized optimization under the mentorship of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. See my <a href="cv.html">CV</a> for more detailed information.
 
 </p>
 <h2>News</h2>
 <ul>
-<li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>.
-</p>
-</li>
-<li><p>Sept. 2023: I have been an RA at CUHKSZ.
-</p>
-</li>
-<li><p>Sept. 2023: I resigned from FABU.AI.
+<li><p>Aug. 2023: I started my PhD at HKUST.
 
 </p>
 </li>
@@ -132,7 +126,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-08-06.
+Last updated on 2024-08-13.
 </div>
 </div>
 </div>
