--- a/main/cv.html
+++ b/main/cv.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Education</h2>
 <ul>
-<li><p>Aug. 2024 - Present : PhD student in Electronic and Computer Engineering
+<li><p>Aug. 2024 - Present : PhD student in Electronic &amp; Computer Engineering
 , <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>The Hong Kong University of Science &amp; Technology</a>
 </p>
 </li>
@@ -82,7 +82,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-08-06.
+Last updated on 2024-08-13.
 </div>
 </div>
 </div>
