--- a/main/index.html
+++ b/main/index.html
@@ -28,7 +28,7 @@ MathJax.Hub.Config({
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><p><i>PhD Student</i>, Department of Electronic & Computer Engineering<br />
 The Hong Kong University of Science & Technology<br />
-Clear Water Bay, Hong Kong<br /><br />
+Hong Kong, China<br /><br />
 
 <b>Email</b>: jingwangli [at] outlook.com (<i>Preferred</i>)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwang.li [at] connect.ust.hk<br />
@@ -126,7 +126,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-08-13.
+Last updated on 2024-08-18.
 </div>
 </div>
 </div>
