--- a/main/cv.html
+++ b/main/cv.html
@@ -35,7 +35,7 @@ MathJax.Hub.Config({
 
 </p>
 </li>
-<li><p>Sept. 2015 - Jun. 2019 : <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>
+<li><p>Sept. 2015 - Jun. 2019 : <a href="https://en.hzau.edu.cn" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>
 </p>
 <ul>
 <li><p>Sept. 2016 - Jun. 2019 : BMgmt in Engineering Management
@@ -82,7 +82,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-08-18.
+Last updated on 2024-08-26.
 </div>
 </div>
 </div>
