--- a/main/index.html
+++ b/main/index.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p><i>PhD Student</i>, Department of Electronic & Computer Engineering<br />
+<td align="left"><p><i>PhD Student</i>, Department of ECE<br />
 The Hong Kong University of Science & Technology<br />
 Hong Kong, China<br /><br />
 
@@ -103,7 +103,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </li>
 </ol>
 <h2>Academic Services</h2>
-<p>Reviewer of
+<p>Reviewer for
 </p>
 <ul>
 <li><p><i>IEEE Transactions on Control of Network Systems</i>
@@ -126,7 +126,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-08-18.
+Last updated on 2024-08-26.
 </div>
 </div>
 </div>
