correct the year

--- a/main/cv.html
+++ b/main/cv.html
@@ -26,14 +26,21 @@ MathJax.Hub.Config({
 </div>
 <h2>Education</h2>
 <ul>
-<li><p>Aug. 2024 - Present : PhD student in Electronic &amp; Computer Engineering
-, <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>The Hong Kong University of Science &amp; Technology</a>
+<li><p>Aug. 2024 - Present : PhD student in Electronic &amp; Computer Engineering, <a href="https://hkust.edu.hk" target=&ldquo;blank&rdquo;>The Hong Kong University of Science &amp; Technology</a>
 </p>
+<ul>
+<li><p>Supervisor: <a href="https://scholar.google.com/citations?hl=en&amp;user=SpVboHsAAAAJ" target=&ldquo;blank&rdquo;>Prof. Vincent Lau</a>
+</p>
+</li></ul>
 </li>
 <li><p>Sept. 2019 - Jun. 2022 : MEng in Control Science &amp; Engineering, <a href="https://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>
+</p>
+<ul>
+<li><p>Supervisor: <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>
 
 
 </p>
+</li></ul>
 </li>
 <li><p>Sept. 2015 - Jun. 2019 : <a href="https://en.hzau.edu.cn" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>
 </p>
@@ -53,6 +60,10 @@ MathJax.Hub.Config({
 <ul>
 <li><p>Sept. 2023 - Jun. 2024 : Research Assistant, <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>
 </p>
+<ul>
+<li><p>Mentor: <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>
+</p>
+</li></ul>
 </li>
 <li><p>Jun. 2022 - Sept. 2023 : Algorithm Engineer, <a href="https://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>
 
@@ -82,7 +93,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-09-06.
+Last updated on 2024-11-07.
 </div>
 </div>
 </div>
