change the order of emails

--- a/main/index.html
+++ b/main/index.html
@@ -30,8 +30,8 @@ MathJax.Hub.Config({
 The Hong Kong University of Science & Technology<br />
 Hong Kong, China<br /><br />
 
-<b>Email</b>: jingwangli [at] outlook.com (<i>Preferred</i>)<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwang.li [at] connect.ust.hk<br />
+<b>Email</b>: jingwang.li [at] connect.ust.hk (<i>Preferred</i>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli [at] outlook.com<br />
 
 <b>Links</b>: <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 
@@ -126,7 +126,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-11-07.
+Last updated on 2024-11-15.
 </div>
 </div>
 </div>
