--- a/main/index.html
+++ b/main/index.html
@@ -110,6 +110,9 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </p>
 </li>
 <li><p><i>IEEE Transactions on Systems, Man and Cybernetics: Systems</i>
+</p>
+</li>
+<li><p><i>Journal of Computational and Applied Mathematics</i>
 
 </p>
 </li>
@@ -126,7 +129,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-11-15.
+Last updated on 2024-11-17.
 </div>
 </div>
 </div>
