--- a/main/index.html
+++ b/main/index.html
@@ -30,11 +30,8 @@ MathJax.Hub.Config({
 The Hong Kong University of Science & Technology<br />
 Hong Kong, China<br /><br />
 
-<b>Email</b>: jingwang.li [at] connect.ust.hk (<i>Preferred</i>)<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli [at] outlook.com<br />
-
+<b>Email</b>: jingwang.li [at] connect.ust.hk<br />
 <b>Links</b>: <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
-
 </p>
 </td></tr></table>
 <h2>About</h2>
@@ -118,8 +115,6 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </li>
 </ul>
 <h2>Visitors Map</h2>
-<p>The data have been collected since Oct. 2023.
-</p>
 <p><a href='https://clustrmaps.com/site/1bwx0'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=400&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg'/></a>
 
 
@@ -129,7 +124,7 @@ Previously, I received a BMgmt in Engineering Management from <a href="https://e
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-11-17.
+Last updated on 2024-11-29.
 </div>
 </div>
 </div>
